--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -2,11 +2,11 @@
 # to provide dependencies and expose ports for local testing
 
 services:
-  ffc-template-node:
+  fcp-fd-customer-receiver-messages:
     build:
       target: development
-    image: ffc-template-node-development
-    container_name: ffc-template-node-development
+    image: fcp-fd-customer-receiver-messages-development
+    container_name: fcp-fd-customer-receiver-messages-development
     ports:
       - "3000:3000"
       - "9229:9229"
