--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ffc-template-node",
-  "version": "0.1.0",
-  "description": "description-of-project-goes-here",
-  "homepage": "https://github.com/DEFRA/ffc-template-node",
+  "name": "fcp-fd-customer-receiver-messages",
+  "version": "0.1.1",
+  "description": "Message receiver microservice for the Single Front Door",
+  "homepage": "https://github.com/DEFRA/fcp-fd-customer-receiver-messages",
   "main": "app/index.js",
   "type": "module",
   "scripts": {
