--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "author": "Defra",
   "contributors": [
-    "Rana Salem <rana.salem@defra.gov.uk>"
+    "Rana Salem <rana.salem@defra.gov.uk>",
+    "Simon Dunn <simon.dunn1@defra.gov.uk>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
