--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fcp-fd-customer-receiver-messages",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Message receiver microservice for the Single Front Door",
   "homepage": "https://github.com/DEFRA/fcp-fd-customer-receiver-messages",
   "main": "app/index.js",
@@ -16,7 +16,8 @@
   },
   "author": "Defra",
   "contributors": [
-    "Rana Salem <rana.salem@defra.gov.uk>"
+    "Rana Salem <rana.salem@defra.gov.uk>",
+    "Simon Dunn <simon.dunn1@defra.gov.uk>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
