--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fcp-fd-customer-receiver-messages",
-  "version": "0.1.1",
+  "version": "0.1.4",
   "description": "Message receiver microservice for the Single Front Door",
   "homepage": "https://github.com/DEFRA/fcp-fd-customer-receiver-messages",
   "main": "app/index.js",
@@ -15,7 +15,10 @@
     "start:debug": "nodemon --inspect-brk=0.0.0.0 --ext js --legacy-watch app/index.js"
   },
   "author": "Defra",
-  "contributors": [],
+  "contributors": [
+    "Rana Salem <rana.salem@defra.gov.uk>",
+    "Simon Dunn <simon.dunn1@defra.gov.uk>"
+  ],
   "license": "OGL-UK-3.0",
   "dependencies": {
     "@hapi/hapi": "21.3.2",
